[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "simple_snapraid_interface"
version = "0.1.0"
description = "Simple wrapper designed to interface with a SnapRAID setup with the `sync` command. Designed to be used alongside the `simple_async_command_manager` package."
readme = "README.md"
authors = [
    {name = "Steven Broaddus", email = "Steven.Broaddus220@gmail.com"},
]
license = { file = "LICENSE" }