[tool.poetry]
name = "simple-snapraid-interface"
version = "0.1.0"
description = "Simple wrapper designed to interface with a SnapRAID setup with the `sync` command. Designed to be used alongside the `simple_async_command_manager` package."
authors = ["SBroaddus220 <steven.broaddus220@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "simple_snapraid_interface"}]

[tool.poetry.dependencies]
python = "^3.11"
simple_async_command_manager = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
